Add O/F sweep validation tests for GibbsMinimizer; minor corrections GibbsMinimizer_OFSweep_UT validates the Gibbs solver across fuel-rich, near-stoichiometric, and oxidizer-rich conditions for LOX/LH2, LOX/CH4, and LOX/RP-1. Reference values are NASA CEA tp outputs. Tolerances follow the same ±3 % / ±10 % scheme as the existing CEA validation  suite, tightened from the original estimated-value placeholders.   Typo fixes in comments. BoundaryLayerCorrection.localMachNumber uses Math.clamp instead of the manual Math.max/Math.min chain.